# django_serializers

./: README.md  README_PR.md  db.sqlite3  manage.py  pyproject.toml  requirements.txt
api/: models.py  serializers.py  tests.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_aluno_email.py
categories/: models.py  serializers.py  tests.py  urls.py  views.py  viewset.py
categories/migrations/: 0001_initial.py
core/: urls.py  views.py
django_serializers/: asgi.py  settings.py  urls.py  views.py  wsgi.py
orders/: models.py  serializers.py  tests.py  urls.py  viewset.py
orders/migrations/: 0001_initial.py  0002_order_status_alter_order_product_and_more.py  0002_remove_order_total_price_remove_order_updated_at_and_more.py  0003_alter_order_quantity.py  0004_alter_order_product.py
products/: models.py  serializers.py  tests.py  urls.py  views.py  viewset.py
products/migrations/: 0001_initial.py  0002_remove_product_available_remove_product_created_at_and_more.py
