[tool.poetry]
name = "django_serializers"
version = "0.1.0"
description = ""
authors = ["Luanvlw23@example.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^5.0.5"
djangorestframework = "^3.15.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"